<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.ac.up.cs.www.navup.InterestPointActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/poi_pref_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/poi_pref_share"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="60dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/poi_pref_share_info"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            android:padding="8dp"
            android:text="@string/title_msg_notification"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintLeft_toLeftOf="@+id/cardview1"
            app:layout_constraintRight_toRightOf="@+id/cardview1"
            app:layout_constraintTop_toBottomOf="@+id/cardview1" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
