<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_constraintTop_toBottomOf="@+id/switch1"
    tools:context=".NotificationActivity"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/txt_msgNotification"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        android:text="@string/msg_notification_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_msgNotification"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_msg_notification"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="60dp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="54dp"
            android:padding="8dp"
            android:text="@string/title_vibrate"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintLeft_toLeftOf="@+id/cardview1"
            app:layout_constraintRight_toRightOf="@+id/cardview1"
            app:layout_constraintTop_toBottomOf="@+id/cardview1" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="4dp"
        android:text="@string/inapp_notification_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview1" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <Switch
            android:id="@+id/switch3"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:padding="8dp"
            android:text="@string/title_vibrate"
            app:layout_constraintTop_toBottomOf="@+id/switch3"
            tools:layout_editor_absoluteX="8dp" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/title_msg_notification" />

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
