<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="20dp"
    tools:context=".SettingsMainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_Profile"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="openProfile"
        app:layout_constraintBottom_toTopOf="@+id/cl_Location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/img_Profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/lbl_profile"
            app:layout_constraintBottom_toTopOf="@+id/txt_Profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_profile_48dp" />

        <TextView
            android:id="@+id/txt_Profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/lbl_profile"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_InterestPoint"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="openInterestPoints"
        app:layout_constraintBottom_toTopOf="@+id/cl_Notifications"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/img_InterestPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/lbl_interestpoints"
            app:layout_constraintBottom_toTopOf="@+id/txt_InterestPoint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_pindrop_48dp" />

        <TextView
            android:id="@+id/txt_InterestPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/lbl_interestpoints"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_Location"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="87dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:clickable="true"
        android:onClick="openMyLocations"
        app:layout_constraintBottom_toTopOf="@+id/cl_HelpFAQ"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/img_Location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/lbl_locations"
            app:layout_constraintBottom_toTopOf="@+id/txt_Location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_location_48dp" />

        <TextView
            android:id="@+id/txt_Location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/lbl_locations"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_Notifications"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="87dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:clickable="true"
        android:onClick="openNotifications"
        app:layout_constraintBottom_toTopOf="@+id/cl_Logout"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/img_Notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/lbl_notification"
            app:layout_constraintBottom_toTopOf="@+id/txt_Notificiation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_notifications_48dp" />

        <TextView
            android:id="@+id/txt_Notificiation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/lbl_notification"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_HelpFAQ"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:clickable="true"
        android:onClick="openHelpFAQ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/img_HelpFAQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/lbl_helpfaq"
            app:layout_constraintBottom_toTopOf="@+id/txt_HelpFAQ"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_helpfaq_48dp" />

        <TextView
            android:id="@+id/txt_HelpFAQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/lbl_helpfaq"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_Logout"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1">

        <ImageView
            android:id="@+id/img_Logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-139dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/holo_red_dark"
            android:contentDescription="@string/lbl_logout"
            app:layout_constraintBottom_toTopOf="@+id/txt_Logout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_logout_48dp" />

        <TextView
            android:id="@+id/txt_Logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:text="@string/lbl_logout"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
